src/objects/SiteQualitySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ASTRUM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASTRUM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPRE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRG_Batch_Size__c</fullName>
        <label>NRG Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Roof_Derate__c</fullName>
        <label>One Roof Derate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isHerokuProcess__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Turn On Heroku Process</inlineHelpText>
        <label>isHerokuProcess</label>
        <type>Checkbox</type>
    </fields>
    <label>Site Quality Settings</label>
</CustomObject>